# sandbox

./: .gitignore  all.py  cl.py  cylinder.py  graph.py  main.py  main1.py  merge.py  merge_sk.py  metrics.py  neuro.py  pcd_textio.py  pyproject.toml  sin.py  skelet.ipynb  skelet.py
merge/: README.md  config.py  export.py  intrinsics.py  main.py  pipeline.py  registration.py  rgbd.py  roi.py  transforms.py  tsdf.py  viz.py
trusskit/: __init__.py  config.py  graph_build.py  graph_traverse.py  io.py  mesh.py  nodes_edges.py  pipeline.py  plane.py  project2d.py  skeleton2d.py  transforms.py  viewer.py
utils/: config.py  error_tracker.py  helpers.py  io.py  keyboard.py  logger.py
vision/skeleton/: config.py  export.py  geometry.py  grouping.py  nodes.py  normals.py  pipeline.py  planes.py  refine.py  regions.py  skeleton2d.py  skeleton3d.py  voxelize.py
vision/viz/: hotkeys.py  overlays.py  viewer.py
