[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sandbox"
version = "0.1.0"
description = "Modular RGB-D merge pipeline with TSDF and robust registration."
readme = { file = "merge/README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
    "numpy>=1.24,<3",
    "open3d>=0.18,<0.20",
    "opencv-python>=4.8,<5",
    "loguru>=0.7",
    "tqdm>=4.66",
    "pynput>=1.8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "types-setuptools",
    "types-tqdm",
]
kbd = ["pynput>=1.7"]

[project.scripts]
merge-pipeline = "merge.main:run"

[tool.hatch.build]
# Ensure the in-package README is available for sdist/wheel
include = ["merge/**", "merge/README.md", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["merge"]

# -------------------------- Code Style / Lint ---------------------------

[tool.black]
line-length = 80
target-version = ["py310", "py311", "py312"]
skip-string-normalization = true

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["F401"]
fixable = ["I", "F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
